# QuadSys

./: .gitignore  .gitmodules  README.md  Vagrantfile  bootstrap.sh
QuadGS/: CMakeLists.txt  Makefile  QuadGSUtils.cmake  log.tmp
QuadGS/Common/: CMakeLists.txt
QuadGS/Common/AppLog/: AppLog.h  CMakeLists.txt
QuadGS/Common/AppLog/src/: AppLog.cpp
QuadGS/Common/AppLog/test/: AppLogTest.cpp
QuadGS/Common/AppLogHandler/: AppLogHandler.h  CMakeLists.txt
QuadGS/Common/AppLogHandler/src/: AppLogHandler.cpp
QuadGS/Common/BinaryStream/: BinaryStream.h
QuadGS/Common/BinaryStream/test/: BinaryStreamTest.cpp
QuadGS/Common/CommandTree/: CMakeLists.txt  QGS_Tree.h  QGS_TreeValue.h
QuadGS/Common/CommandTree/src/: QGS_Tree.cpp
QuadGS/Common/Fifo/: CMakeLists.txt  ThreadSafeFifo.hpp
QuadGS/Common/Messages/: CMakeLists.txt  Msg_LogIo.h  Msg_Param.h  Msg_ParamIo.h  Msg_UiCommandResult.h  common_types.h  genAllMsg.sh  messageTypes.h  messages.txt  msgAddr.h  msg_enums.h
QuadGS/Common/Messages/FC_Control/: CMakeLists.txt  Msg_CtrlModeReq.h  Msg_NewSetpoint.h
QuadGS/Common/Messages/FC_IO/: CMakeLists.txt  Msg_DebugIo.h  Msg_LogIo.h  Msg_ParamIo.h
QuadGS/Common/Messages/FC_Status/: CMakeLists.txt  Msg_Error.h  Msg_FcFault.h  Msg_FlightMode.h
QuadGS/Common/Messages/Fc_Debug/: CMakeLists.txt  Msg_Debug.h
QuadGS/Common/Messages/GS_FC_Control/: CMakeLists.txt  Msg_FlightModeReq.h  Msg_NewRcSetpoint.h
QuadGS/Common/Messages/GS_FC_Debug/: CMakeLists.txt  Msg_Debug.h  Msg_TestMem.h  Msg_TestMemReg.h
QuadGS/Common/Messages/GS_FC_IO/: CMakeLists.txt  Msg_TestTransmission.h
QuadGS/Common/Messages/GS_FC_Log/: CMakeLists.txt  Msg_AppLog.h  Msg_Log.h
QuadGS/Common/Messages/GS_FC_Param/: CMakeLists.txt
QuadGS/Common/Messages/GS_FC_Status/: CMakeLists.txt  Msg_BindRc.h  Msg_BindRc1.h  Msg_BindRc2.h  Msg_CtrlMode.h  Msg_InitExternal.h
QuadGS/Common/Messages/GS_System/: CMakeLists.txt  Msg_AppLog.h  Msg_Display.h  Msg_GsAppLog.h  Msg_GsAppLogFind.h  (+5 more)
QuadGS/Common/MsgBase/: CMakeLists.txt  QGS_ModuleMsg.h  QGS_Msg.h  QGS_ParamMsg.h  common_types.h  messageTypes.h  msgAddr.h  msgControl.h  msg_enums.h
QuadGS/Common/QGS_Module/: CMakeLists.txt  QGS_Module.h  QGS_Router.h
QuadGS/Common/Semaphore/: CMakeLists.txt  Semaphore.h
QuadGS/Common/TestHelpers/: CMakeLists.txt  FakeUiComModuleBase.h
QuadGS/Core/: CMakeLists.txt  Core.h
QuadGS/Core/BinaryStream/: BinaryStream.h  CMakeLists.txt
QuadGS/Core/CommandTree/: CMakeLists.txt  QuadGSTree.h  QuadGSTreeValue.h
QuadGS/Core/DataMsg/: CMakeLists.txt  QCMsgHeader.h  QuadDebugMsg.h  QuadGSMsg.h  QuadLogMsg.h  QuadParamPacket.h
QuadGS/Core/DataPackets/: CMakeLists.txt  QspPayloadRaw.h  QuadParamPacket.h
QuadGS/Core/Log/: CMakeLists.txt
QuadGS/Core/LogHandler/: CMakeLists.txt  LogHandler.h
QuadGS/Core/Parameters/: CMakeLists.txt  Parameters.h
QuadGS/Core/src/: Core.cpp  QGS_Core.cpp
QuadGS/Core/test/: MockCore.cpp  MockCore.h  MockQGSCoreInterface.h
QuadGS/IO/: CMakeLists.txt  IoBase.h
QuadGS/IO/Serial/: CMakeLists.txt  SerialManager.h
QuadGS/Interfaces/: QGS_CoreInterface.h  QGS_IoInterface.h  QGS_TrackerInterface.h
QuadGS/Modules/: CMakeLists.txt  main.cpp
QuadGS/Modules/Cli/: CLI.h  CMakeLists.txt
QuadGS/Modules/Core/: Core.cpp  Core.h
QuadGS/Modules/IO/: IoBase.h
QuadGS/Modules/LogHandler/: CMakeLists.txt  LogHandler.h
QuadGS/Modules/Parameters/: CMakeLists.txt  Parameters.h
QuadGS/Modules/QGS_Viewer/: CMakeLists.txt
QuadGS/Modules/SerialIo/: CMakeLists.txt  SerialManager.h
QuadGS/Modules/UserInterface/: UiBase.h
QuadGS/Modules/ZedTracker/: CMakeLists.txt  ZedTracker.h
QuadGS/Modules/dbgModule/: CMakeLists.txt  dbgModule.h
QuadGS/QGS_Core/: CMakeLists.txt  Core.h  QGS_CoreInterface.h
QuadGS/QGS_Core/AppLog/: AppLog.h
QuadGS/QGS_Core/CommandTree/: CMakeLists.txt  QGS_Tree.h  QuadGSTree.h  QuadGSTreeValue.h
QuadGS/QGS_Core/DataMsg/: CMakeLists.txt  QCMsgHeader.h  QuadDebugMsg.h  QuadGSMsg.h  QuadLogMsg.h  QuadParamPacket.h
QuadGS/QGS_Core/LogHandler/: CMakeLists.txt  LogHandler.h
QuadGS/QGS_Core/Messages/: CMakeLists.txt  QGS_DebugMsg.h  QGS_Msg.h  QGS_MsgHeader.h  QGS_ParamMsg.h
QuadGS/QGS_Core/Parameters/: CMakeLists.txt  Parameters.h
QuadGS/QGS_Core/src/: Core.cpp  QGS_Core.cpp
QuadGS/QGS_Core/test/: MockCore.cpp  MockCore.h  MockQGSCoreInterface.h
QuadGS/QGS_IO/: IoBase.h  QGS_IoInterface.h
QuadGS/QGS_IO/Serial/: CMakeLists.txt  SerialManager.h
QuadGS/QGS_Tracker/: CMakeLists.txt  QGS_Tracker_Interface.h
QuadGS/QGS_Tracker/ZED_Tracker/: CMakeLists.txt  ZedTracker.h
QuadGS/QGS_UI/: CMakeLists.txt  QGS_UiInterface.h
QuadGS/QGS_UI/CLI/: CLI.h  CMakeLists.txt  QuadCLI.h
QuadGS/UI/: UiBase.h
QuadGS/UI/CLI/: CMakeLists.txt  QuadCLI.h
QuadGS/Utilities/: gdbLoop.gdb
QuadGS/Utilities/pythonGenerator/: classTemplateHeader  classTemplateImpl  cmakeTemplate  genCmake.py  genMessage.py  genTypes.py  memberCloneTemplateImpl  memberFcnTemplateHeader  memberFcnTemplateImpl  messageTypeParserTemplate  msgAddressesTemplate  msgTypesTemplate  parserTemplate
QuadGS/cmake/: FindReadline.cmake  Findeditline.cmake  QuadGSUtils.cmake
QuadGS/cmake/Modules/: FindReadline.cmake
QuadGS/pythonGenerator/: classTemplateHeader  classTemplateImpl  genMessage.py  genTypes.py
QuadGS/test/: CMakeLists.txt  testGUI
QuadGS/top/: CMakeLists.txt
QuadGS/top/gs_cli/: CMakeLists.txt
QuadGS/top/testCliParam/: CMakeLists.txt  testCLIParam.cpp
QuadGS/utilities/: CMakeLists.txt
QuadGS/utilities/AppLog/: CMakeLists.txt
QuadGS/utilities/BinaryStream/: BinaryStream.h
QuadGS/utilities/Fifo/: ThreadSafeFifo.hpp
QuadGS/utilities/IoMessages/: CMakeLists.txt  QGS_DebugMsg.h  QGS_IoHeader.h  QGS_LogMsg.h  QGS_ModuleMsg.h  QGS_ParamMsg.h  messageTypes.h
QuadGS/utilities/Messages/: CMakeLists.txt  Msg_Debug.h  Msg_Log.h  Msg_Param.h  QGS_DebugMsg.h  QGS_LogMsg.h  QGS_Msg.h  QGS_MsgHeader.h  QGS_ParamMsg.h  genAllMsg.sh  messages.txt
QuadGS/utilities/QGS_Module/: CMakeLists.txt  QGS_CommandMsg.h  QGS_Module.h  QGS_ModuleIoMsg.h  QGS_ModuleMsg.h  QGS_Msg.h  QGS_Router.h
(+842 files in other folders)
