list(APPEND dep "")
qgs_make_header_lib( Messages dep)
add_subdirectory(GS_System)
add_subdirectory(GS_Ui_Command)
add_subdirectory(GS_FC_Param)
add_subdirectory(GS_FC_Log)
add_subdirectory(GS_FC_Debug)
add_subdirectory(GS_FC_IO)
add_subdirectory(GS_FC_Status)
add_subdirectory(GS_FC_Control)
add_subdirectory(Parser)
